# ADS-MQTT-Broker-C-

./: .gitignore  AUTO-BUILD-STATUS.md  BUILD-STATUS.md  CMakeLists.txt  GITHUB-BUILD-READY.md  GITHUB-BUILD-RESULT.txt  GITHUB-SETUP.bat  QUICKSTART.md  README.md  SETUP-COMPLETE.md  auto-monitor.ps1  build-test.bat  build.bat  config.ini  github-run-monitor.ps1  monitor-and-build.bat  push-to-github.bat  setup-build-env.bat  start-nodejs-version.bat  vcpkg.json
.github/: GITHUB-ACTIONS.md
.github/workflows/: build.yml  build.yml.backup
docs/: BUILD.md  CMakeLists.txt
examples/: compression_example.cpp  example.cpp  linux_rt_example.cpp  rtss_example.cpp
include/: ads_realtime_engine.hpp  binary_payload.hpp  compressed_payload.hpp  linux_rt_preempt.hpp  mqtt_publisher.hpp  payload_compression.hpp  plc_discovery.hpp  realtime_config.hpp  rtss_integration.hpp  shared_memory.hpp  variable_batch.hpp
lib/: README.md  TcAdsDll.lib
public/: dashboard.html
src/: ads_realtime_engine.cpp  main.cpp  mqtt_publisher.cpp  plc_discovery.cpp
